--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- Text in the center of the header  -->
         <section>
             <h2>share your holiday dreams</h2>
-            <p>And find the perfect partner to fullfill it</p>
+            <p>And find the perfect partner to fullfill it.</p>
             <a class="redLink" href="#">Find your holiday partner</a>
         </section>
     </header>
